...
    }
    
// MARK: View Lifecycle Methods
    override func viewDidLoad() {
        super.viewDidLoad()
        
        let setButton = UIBarButtonItem(title: "Start Random Rating", style: .plain, target: self, action: #selector(self.btnRandomPressed(_:)))
        navigationItem.rightBarButtonItem = setButton

        tblViewMovieList.rowHeight = UITableView.automaticDimension
        tblViewMovieList.estimatedRowHeight = 160
        
        movieListViewModel = HXMovieListViewModel(delegate: self)
...
    
    //    - Description: Triggers random rating to start
    //    - Parameters: object: UIBarButtonItem
    //    - Returns: Void
    @objc func btnRandomPressed(_ sender: UIBarButtonItem) {
        if sender.title == "Start Random Rating" {
            sender.title = "Stop Random Rating"
            movieListViewModel.startRandomRating()
        } else {
            sender.title = "Start Random Rating"
            movieListViewModel.stopRandomRating()
        }
    }
...
