...
    @IBOutlet var lblDescription : UILabel!
    @IBOutlet var ratingView : StarRatingView!
    
    var movieDetailsViewModel: HXMovieDetailsViewModel!
    
    override func viewDidLoad() {
        let setButton = UIBarButtonItem(title: "Done", style: .plain, target: self, action: #selector(self.btnBackPressedPressed(_:)))
        navigationItem.leftBarButtonItem = setButton
        ratingView.delegate = self
        setUpMovieDetails()
    }
    
    @objc func btnBackPressedPressed(_ sender: UIBarButtonItem) {
...
