...
                            <constraint firstItem="HTT-C2-uH9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jzu-b0-YQb"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="HTT-C2-uH9" secondAttribute="bottom" id="sai-jk-qeC"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HTT-C2-uH9" secondAttribute="trailing" id="vtd-0U-9wJ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Top Movies" id="3gG-Bd-jr5"/>
                    <connections>
                        <outlet property="tblViewMovieList" destination="HTT-C2-uH9" id="lh2-gi-umF"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
